# vicon_bridge

./: CMakeLists.txt  package.xml
cmake/: ROS1.cmake  ROS2.cmake
config/: ekf.yaml  hovergames.yaml  jackal.yaml  obstacles.yaml
include/vicon_bridge/: node_handler_ros.h  ros_definitions.h  segment_publisher.h  segment_publisher_posestamped.h  segment_publisher_posewithcovariancestamped.h  segment_publisher_transformstamped.h  vicon_bridge.h  vicon_remap.h
launch/: dynamic_objects.launch  hovergames.launch  jackal.launch  vicon.launch  vicon_launch.py
msg/: Markers.msg
old_code/include/vicon_bridge/: printer.h  vicon_bridge.h
old_code/src/: vicon_bridge.cpp
src/: bundle_obstacle_node.cpp  remap_node.cpp  vicon_bridge.cpp  vicon_remap.cpp
