<?xml version="1.0"?>
<package format="3">
  <name>vicon_bridge</name>
  <version>1.0.1</version>
  <description>

     This is a driver providing data from VICON motion capture systems. It is based on the vicon_mocap package from the starmac stacks. 
     Additionally, it can handle multiple subjects / segments and allows to calibrate an origin of the vehicle(s) as this is somehow tedious with the VICON Tracker.

  </description>
  <maintainer email="markus.achtelik@mavt.ethz.ch">Markus Achtelik</maintainer>
  <license>BSD, based on vicon_mocap from the starmac stacks </license>
  <url>http://ros.org/wiki/vicon_bridge</url>


  <!-- ROS1: Dependencies needed to compile this package. -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">geometry_msgs</depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>


  <!-- ROS2: Dependencies needed to compile this package. -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>


  <!-- System dependencies for both versions -->
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>boost</depend>


  <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>


